--- a/playbook.yml
+++ b/playbook.yml
@@ -199,6 +199,8 @@
             content: |
               FROM ubuntu:22.04
 
+              ENV DEBIAN_FRONTEND=noninteractive
+
               # 1. Dependencias base mínimas
               RUN apt-get update && \
                   apt-get install -y --no-install-recommends \
