--- a/playbook.yml
+++ b/playbook.yml
@@ -310,7 +310,8 @@
               OAUTH2_PROXY_COOKIE_SECRET={{ oauth_cookie_secret }}
               OAUTH2_PROXY_REDIRECT_URL=https://{{ domain }}/oauth2/callback
               OAUTH2_PROXY_AUTHENTICATED_EMAILS_FILE=/etc/oauth2_proxy/allowed_emails.txt
-              OAUTH2_PROXY_SSL_INSECURE_SKIP_VERIFY=true
+              OAUTH2_PROXY_TLS_CERT_FILE=/ssl/fullchain.pem
+              OAUTH2_PROXY_TLS_KEY_FILE=/ssl/privkey.pem
               OAUTH2_PROXY_HTTP_ADDRESS=0.0.0.0:4180
               OAUTH2_PROXY_UPSTREAMS=http://code:8443
               OAUTH2_PROXY_COOKIE_SECURE=true
